--- a/gallery.html
+++ b/gallery.html
@@ -252,7 +252,7 @@
 		                        <a class="btn btn-lg btn-secondary btn-lg-square rounded-circle me-2" href="mailto:ankushsodmise123@gmail.com"><i class="fa fa-envelope"></i></a>
 							</div>
                             <div class="mt-auto mb-3">
-                                <h4 class="mb-1">Purandar building, Rahatni</h4>
+                                <h4 class="mb-1">Purandar building, Rahatani</h4>
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
 		                        <a class="btn btn-lg btn-secondary btn-lg-square rounded-circle me-2" href="mailto:ankushsodmise123@gmail.com"><i class="fa fa-envelope"></i></a>
 							</div>
                             <div class="mt-auto mb-3">
-                                <h4 class="mb-1">Steel India Pvt. Ltd., Chakan</h4>
+                                <h4 class="mb-1">Stihl India Pvt. Ltd., Chakan</h4>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
 		                        <a class="btn btn-lg btn-secondary btn-lg-square rounded-circle me-2" href="mailto:ankushsodmise123@gmail.com"><i class="fa fa-envelope"></i></a>
 							</div>
                             <div class="mt-auto mb-3">
-                                <h4 class="mb-1">Empro, Karkala</h4>
+                                <h4 class="mb-1">Empro, Markal</h4>
                             </div>
                         </div>
                     </div>
