--- a/service.html
+++ b/service.html
@@ -148,7 +148,7 @@
                             <div><i class="fa fa-2x fa-brush"></i></div>
                         </div>
                         <h3 class="mt-5">Greel Realing Oil Paint Services</h3>
-                        <a class="btn shadow-none text-secondary" href=""style="text-align:left; margin-left:10px;">1) sending Greel railing with paper<br>2) 1 coat red oxide and 2 coat of asian oil paint</a>
+                        <a class="btn shadow-none text-secondary" href=""style="text-align:left; margin-left:10px;">1) sanding Greel railing with paper<br>2) 1 coat red oxide and 2 coat of asian oil paint</a>
                     </div>
                 </div>
                
