--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 				<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu m-0">
-                        <a href="./service.html/#internal_service" class="dropdown-item">Interanal</a>
+                        <a href="./service.html" class="dropdown-item">Interanal</a>
                         <a href="./service.html" class="dropdown-item">External</a>
                         <a href="./service.html" class="dropdown-item">Greel Realing Oil Paint</a>
                        
